--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NAMU</title>
+    <title>Художній музей</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -12,31 +12,65 @@
   </head>
   <body class="page__body">
     <header class="header">
-      <a href="#" class="header__menu-opener">
-
-      </a>
-
-      <div class="header__logo">
-        Na
-        <br>
-        mu
-      </div>
-
-      <img
-        src="./images/header.jpg"
-        alt="NAMU photo"
-        class="header__photo"
-      >
-
-      <h1 class="header__title">
-        Художній музей
-      </h1>
-
-      <div class="button-tickets">
-        <div class="button-tickets__text">
-          Квитки
+      <div class="grid grid--onTablet grid--onDesktop">
+        <div class="grid__item grid__item--onTablet-1-1 grid__item--onDesktop-1-1">
+          <a
+            href="#"
+            class="header__menu-button"
+          >
+          </a>
         </div>
-        <a href="#" class="button-tickets__buy"></a>
+
+        <div class="grid__item grid__item--onTablet-3-6 grid__item--onDesktop-6-12">
+          <div class="header__photo-container">
+            <img
+              src="images/header.jpg"
+              alt="NAMU"
+              class="header__photo"
+            >
+          </div>
+          <div class="grid__item grid__item--onTablet-3-4  grid__item--onDesktop-3-7">
+            <a
+              href="#"
+              class="header__logo"
+            >
+              NA
+              <br>
+              MU
+            </a>
+          </div>
+        </div>
+
+        <div class="grid__item grid__item--onTablet-1-4 grid__item--onDesktop-3-7">
+          <div class="header__title-n-tickets-container">
+            <h1 class="header__title">
+              Худож<span class="header__title header__title--transparent">ній</span> музей
+            </h1>
+
+            <div class="header__tickets">
+              <a
+              href="#"
+              class="header__tickets-text">
+                Квитки
+              </a>
+              <a href="#" class="header__tickets-buy"></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="grid__item grid__item--onDesktop-1-1">
+          <div class="header__events-link-container">
+            <div class="header__line">
+
+            </div>
+            <a
+              href="#current-events"
+              class="header__events-link"
+            >
+              Події
+            </a>
+          </div>
+        </div>
       </div>
     </header>
 
@@ -47,86 +81,100 @@
         </h2>
 
         <div class="exhibitions">
-          <div class="exhibitions__photo-container">
-            <!-- <img
-              src="images/exhibitions__photo1.jpg"
-              alt="photo 1"
-              class="exhibitions__photo"
-            > -->
-          </div>
-
-          <div class="exhibitions__type-n-date">
-            <div class="exhibitions__type">
-              Виставка
+          <div class="grid grid--onDesktop">
+            <div class="exhibitions__photo-container">
+              <img
+                src="images/exhibition__photo1.jpg"
+                alt="photo 1"
+                class="exhibitions__photo"
+              >
             </div>
 
-            <div class="exhibitions__date">
-              26.08-29.11.2019
-            </div>
-          </div>
+            <div class="grid__item grid__item--onDesktop-9-12">
+              <div class="exhibitions__info-container">
+                <div class="exhibitions__type-n-date">
+                  <div class="exhibitions__type">
+                    Виставка
+                  </div>
 
-          <div class="exhibitions__name">
-            Йду і повертаюсь
-          </div>
+                  <div class="exhibitions__date">
+                    26.08-29.11.2019
+                  </div>
+                </div>
 
-          <div class="exhibitions__about">
-            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-          </div>
+                <div class="exhibitions__name">
+                  Йду і повертаюсь
+                </div>
 
-
-          <div class="exhibitions__photo-container">
-            <img
-              src="images/exhibitions__photo2.jpg"
-              alt="photo 2"
-              class="exhibitions__photo"
-            >
-          </div>
-
-          <div class="exhibitions__type-n-date">
-            <div class="exhibitions__type">
-              Виставка
-            </div>
-
-            <div class="exhibitions__date">
-              26.08-29.11.2019
-            </div>
-          </div>
-
-          <div class="exhibitions__name">
-            І спогади і мрії
-          </div>
-
-          <div class="exhibitions__about">
-          Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-          </div>
-        </div>
-
-        <div class="lections">
-          <div class="lections__photo-container">
-            <img
-              src="images/lections__photo1.jpg"
-              alt="photo 1"
-              class="lections__photo"
-            >
-          </div>
-
-          <div class="lections__info-container">
-            <div class="lections__type-n-date">
-              <div class="lections__type">
-                Лекція
+                <div class="exhibitions__about">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </div>
               </div>
+            </div>
+          </div>
 
-              <div class="lections__date">
-                26/08/2019 - 11:00
+          <div class="grid grid--onDesktop">
+            <div class="grid__item grid__item--onDesktop-6-12">
+              <div class="exhibitions__photo-container">
+                <img
+                  src="images/exhibitions__photo2.jpg"
+                  alt="photo 2"
+                  class="exhibitions__photo"
+                >
               </div>
             </div>
 
-            <div class="lections__theme">
-              Від класицизму до романтизму
+            <div class="grid__item grid__item--onDesktop-1-4">
+              <div class="exhibitions__info-container">
+                <div class="exhibitions__type-n-date">
+                  <div class="exhibitions__type">
+                    Виставка
+                  </div>
+
+                  <div class="exhibitions__date">
+                    26.08-29.11.2019
+                  </div>
+                </div>
+
+                <div class="exhibitions__name">
+                  І спогади і мрії
+                </div>
+
+                <div class="exhibitions__about">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="lections">
+        <div class="lections__photo-container">
+          <img
+            src="images/lections__photo1.jpg"
+            alt="photo 1"
+            class="lections__photo"
+          >
+        </div>
+
+        <div class="lections__info-container">
+          <div class="lections__type-n-date">
+            <div class="lections__type">
+              Лекція
+            </div>
+
+            <div class="lections__date">
+             26/08/2019 - 11:00
+            </div>
+          </div>
+
+          <div class="lections__theme">
+            Від класицизму до романтизму
+          </div>
+        </div>
+      </div>
+
     </section>
 
     <section class="gallery" id="gallery">
@@ -137,13 +185,47 @@
 
         <div class="photo-collection">
           <div class="photo-collection__photo-container">
-            <img
-            src="images/photo-collection__photo1.jpg"
-            alt="photo 1"
-            class="photo-collection__photo"
-            id="photo-1"
-          >
+            <div class="grid grid--onDesktop">
+              <div class="grid__item grid__item--onDesktop-1-4">
+                <img
+                  src="images/photo-collection__photo1.jpg"
+                  alt="photo 1"
+                  class="photo-collection__photo"
+                  id="photo-1"
+                >
+              </div>
+              <div class="grid__item grid__item--onDesktop-5-12">
+                <img
+                  src="images/photo-collection-desktop2.jpg"
+                  alt="photo 2"
+                  class="photo-collection__photo"
+                >
+              </div>
+
+              <div class="grid__item grid__item--onDesktop-1-8">
+                <img
+                  src="images/photo-collection-desktop3.jpg"
+                  alt="photo 3"
+                  class="photo-collection__photo"
+                >
+              </div>
+
+              <div class="grid__item grid__item--onDesktop-9-12">
+                <img
+                  src="images/photo-collection-desktop4.jpg"
+                  alt="photo 4"
+                  class="photo-collection__photo"
+                >
+              </div>
+
+              <img
+                src="images/photo-collection-tablet2.jpg"
+                alt="photo 4"
+                class="photo-collection__photo--tablet-photo2"
+              >
+            </div>
           </div>
+
 
           <div class="photo-collection__buttons">
             <a href="#photo-1" class="photo-collection__button"></a>
@@ -177,88 +259,104 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="footer__logo-n-socials">
-          <div class="footer__logo">
-            Na
-            <br>
-            mu
+        <div class="grid grid--onTablet grid--onDesktop">
+          <div class="grid__item grid__item--onTablet-1-1 grid__item--onDesktop-1-2">
+            <div class="footer__logo-n-socials">
+              <a
+                href="#"
+                class="footer__logo">
+                Na
+                <br>
+                mu
+              </a>
+
+              <div class="footer__socials">
+                <a href="https://www.facebook.com/">
+                  <img
+                  src="images/socials__fb.svg"
+                  alt="facebook"
+                >
+                </a>
+
+                <a href="https://www.instagram.com/">
+                  <img
+                  src="images/socials__ig.svg"
+                  alt="instagram"
+                >
+                </a>
+              </div>
+            </div>
           </div>
 
-          <div class="footer__socials">
-            <img
-              src="images/socials__fb.png"
-              alt="facebook"
-            >
 
-            <img
-              src="images/socials__ig.png"
-              alt="instagram"
-            >
+          <div class="grid__item grid__item--onTablet-2-5 grid__item--onDesktop-3-7">
+            <div class="footer__schedule-n-contacts">
+              <div class="footer__schedule-info">
+                Графік роботи
+                <br>
+                <br>
+                <span class="footer__schedule-time">12:00 — 20:00</span> середа<br>
+                <span class="footer__schedule-time">12:00 — 20:00</span> четвер<br>
+                <span class="footer__schedule-time">12:00 — 20:00</span> п’ятниця<br>
+                <span class="footer__schedule-time">11:00 — 19:00</span> субота<br>
+                <span class="footer__schedule-time">11:00 — 19:00</span> неділя<br>
+                <br>
+                Вихідні понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </div>
+
+              <div class="footer__contacts-info">
+                Контакти:
+                <br>
+                <br>
+                вул. М. Грушевського, 6; Київ, 01001
+                <br>
+                тел. +38 (044) 278-13-57
+                <br>
+                факс +38 (044) 278-74-54
+                <br>
+                e-mail: info@namu.kiev.ua
+              </div>
+
+              <div class="grid__item grid__item--onDesktop-12-12">
+                <a href="#" class="footer__button-up">
+                  &uarr;
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--onTablet-2-5 grid__item--onDesktop-8-10">
+            <nav class="nav footer__nav">
+              <div class="nav__container">
+                <a href="#gallery" class="nav__link">
+                  Галерея
+                  <br>
+                  <br>
+                </a>
+                <a href="#current-events" class="nav__link">
+                  Виставка та події
+                  <br>
+                  <br>
+                </a>
+              </div>
+
+              <div class="nav__container">
+                <a href="#" class="nav__link">
+                  Про нас
+                  <br>
+                  <br>
+                </a>
+                <a href="#" class="nav__link">
+                  Контакти
+                  <br>
+                  <br>
+                </a>
+              </div>
+            </nav>
           </div>
         </div>
-
-        <div class="footer__schedule-n-contacts">
-          <div class="footer__schedule-info">
-            Графік роботи
-            <br>
-            <br>
-            <span class="footer__schedule-time">12:00 — 20:00</span> середа<br>
-            <span class="footer__schedule-time">12:00 — 20:00</span> четвер<br>
-            <span class="footer__schedule-time">12:00 — 20:00</span> п’ятниця<br>
-            <span class="footer__schedule-time">11:00 — 19:00</span> субота<br>
-            <span class="footer__schedule-time">11:00 — 19:00</span> неділя<br>
-            <br>
-            Вихідні понеділок, вівторок<br>
-            Каса припиняє роботу за 1 годину
-            до закриття музею
-          </div>
-
-          <div class="footer__contacts-info">
-            Контакти:
-            <br>
-            <br>
-            вул. М. Грушевського, 6; Київ, 01001
-            <br>
-            тел. +38 (044) 278-13-57
-            <br>
-            факс +38 (044) 278-74-54
-            <br>
-            e-mail: info@namu.kiev.ua
-          </div>
-
-          <a href="#" class="footer__button-up">
-            &uarr;
-          </a>
-        </div>
-
-        <div class="nav footer__nav">
-          <div class="nav__container">
-            <a href="#gallery" class="nav__link">
-              Галерея
-              <br>
-              <br>
-            </a>
-            <a href="#current-events" class="nav__link">
-              Виставка та події
-              <br>
-              <br>
-            </a>
-          </div>
-
-          <div class="nav__container">
-            <a href="#" class="nav__link">
-              Про нас
-              <br>
-              <br>
-            </a>
-            <a href="#" class="nav__link">
-              Контакти
-              <br>
-              <br>
-            </a>
-          </div>
-        </div>
-
         <div class="footer__rights">
           Copyright © 2019. All Rights Reserved.
         </div>
