--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,455 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NA Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="shortcut icon" href="./images/icon.svg" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+
+    <header class="header">
+
+      <div class="container">
+
+        <div class="header__content">
+
+          <div class="logo header__logo">
+            NA
+            <br>
+            MU
+          </div>
+
+        </div>
+
+        <a href="#menu" class="header__menu-opener"></a>
+
+      </div>
+
+    </header>
+
+    <nav class="menu" id="menu">
+
+      <div class="container">
+
+        <a href="#" class="menu__menu-closer"></a>
+
+        <ul class="menu__list">
+
+          <li class="menu__item">
+            <a class="menu__link" href="#gallery">Галерея</a>
+          </li>
+
+          <li class="menu__item">
+            <a class="menu__link" href="#subscribe">Про Нас</a>
+          </li>
+
+          <li class="menu__item">
+            <a class="menu__link" href="#events">Виставки та події</a>
+          </li>
+
+          <li class="menu__item">
+            <a class="menu__link" href="#contacts">Контакти</a>
+          </li>
+
+        </ul>
+
+      </div>
+
+    </nav>
+
+    <main>
+
+      <section class="art-museum page__section">
+
+        <div class="container">
+
+          <div class="grid grid--onDesktop grid--onTablet">
+
+            <div class="
+              grid__item
+              grid__item--1-3
+              grid__item-onDesktop--1-5"
+            >
+
+              <div class="art-museum__content">
+
+                <h1 class="art-museum__title">Художній музей</h1>
+
+                <a href="#events" class="art-museum__button">Квитки</a>
+
+              </div>
+
+            </div>
+
+            <div class="
+              grid__item
+              grid__item--4-6
+              grid__item-onDesktop--6-12"
+            >
+
+              <div class="art-museum__photo"></div>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </section>
+
+      <section class="events page__section" id="events">
+
+        <div class="container">
+
+          <h2 class="events__title">Актуальні події</h2>
+
+          <div class="event">
+
+            <div class="grid grid--onDesktop">
+
+              <div class="grid__item grid__item-onDesktop--1-7">
+
+                <img
+                  src="./images/events/event_1.png"
+                  alt="Йду і повертаюсь"
+                  class="event__image"
+                >
+
+              </div>
+
+              <div class="grid__item grid__item-onDesktop--9-12">
+
+                <div class="event__box">
+
+                  <p class="event__type">Виставка</p>
+                  <p class="event__date">26.08-29.11.2019</p>
+
+                </div>
+
+                <h3 class="event__title">Йду і повертаюсь</h3>
+
+                <p class="event__description">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="event">
+
+            <div class="grid grid--onDesktop">
+
+              <div class="grid__item grid__item-onDesktop--1-7">
+
+                <img
+                  src="./images/events/event_2.png"
+                  alt="І спогади і мрії"
+                  class="event__image"
+                >
+
+              </div>
+
+              <div class="grid__item grid__item-onDesktop--9-12">
+
+                <div class="event__box">
+
+                  <p class="event__type">Виставка</p>
+                  <p class="event__date">26.08-29.11.2019</p>
+
+                </div>
+
+                <h3 class="event__title">І спогади і мрії</h3>
+
+                <p class="event__description">
+                  Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </section>
+
+      <section class="lecture">
+
+        <img
+          src="./images/lecture.png"
+          alt="Від класицизму до романтизму"
+          class="lecture__background"
+        >
+
+        <div class="container">
+
+          <div class="lecture__content">
+
+            <div class="lecture__box">
+
+              <p class="lecture__type">Лекція</p>
+              <p class="lecture__date">26/08/2019 - 11:00</p>
+
+            </div>
+
+            <h3 class="lecture__title">Від класицизму до романтизму</h3>
+
+          </div>
+
+        </div>
+
+      </section>
+
+      <section class="gallery page__section" id="gallery">
+
+        <div class="container">
+
+          <h2 class="gallery__title">Галерея</h2>
+
+          <div class="grid grid--gallary grid--onDesktop">
+
+            <div class="
+              grid__item
+              grid__item-onDesktop--1-4
+              gallery__image-container"
+            >
+
+              <img
+                src="./images/slider/slide_1.jpg"
+                alt="Slide 1"
+                class="gallery__image"
+              >
+
+            </div>
+
+            <div class="
+              grid__item
+              grid__item-onDesktop--5-12
+              gallery__image-container"
+            >
+
+              <img
+                src="./images/slider/slide_2.jpg"
+                alt="Slide 2"
+                class="gallery__image"
+              >
+
+            </div>
+
+            <div class="
+              grid__item
+              grid__item-onDesktop--1-8
+              gallery__image-container"
+            >
+
+              <img
+                src="./images/slider/slide_6.jpg"
+                alt="Slide 3"
+                class="gallery__image"
+              >
+
+            </div>
+
+            <div class="
+              grid__item
+              grid__item-onDesktop--9-12
+              gallery__image-container"
+            >
+
+              <img
+                src="./images/slider/slide_4.jpg"
+                alt="Slide 4"
+                class="gallery__image"
+              >
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </section>
+
+      <section class="subscribe" id="subscribe">
+
+        <div class="container">
+
+          <h2 class="subscribe__title">Підписка</h2>
+
+          <div class="subscribe__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</div>
+
+          <form action="#" class="subscribe__form">
+
+            <label for="email">
+
+              <input
+                type="email"
+                name="email"
+                class="subscribe__email"
+                placeholder="E-mail"
+                required
+              >
+
+            </label>
+
+            <button type="submit" class="subscribe__button"></button>
+
+          </form>
+
+        </div>
+
+      </section>
+
+    </main>
+
+    <footer class="footer">
+
+      <div class="container">
+
+        <div class="grid grid--onTablet grid--onDesktop">
+
+          <div class="
+            grid__item
+            grid__item--1-1
+            grid__item-onDesktop--1-1"
+          >
+
+            <div class="footer__social social-block">
+
+              <div class="logo social-block__logo">
+                NA
+                <br>
+                MU
+              </div>
+
+              <div class="social-block__link-item">
+
+                <a
+                  href="https://www.facebook.com/"
+                  class="
+                    social-block__link
+                    social-block__link--facebook"
+                  target="_blank"
+                ></a>
+
+                <a
+                  href="https://www.instagram.com/"
+                  class="
+                    social-block__link
+                    social-block__link--instagram"
+                    target="_blank"
+                ></a>
+
+              </div>
+
+            </div>
+
+          </div>
+
+
+          <div class="
+            grid__item
+            grid__item--2-5
+            grid__item-onDesktop--3-7"
+          >
+
+            <div class="footer__text-block text-block">
+
+              <p class="text-block__paragraph">
+                Графік роботи:
+                <br>
+                <br>
+                <strong>12:00 — 20:00</strong>  середа
+                <br>
+                <strong>12:00 — 20:00</strong>  четвер
+                <br>
+                <strong>12:00 — 20:00</strong>  п’ятниця
+                <br>
+                <strong>11:00 — 19:00</strong>  субота
+                <br>
+                <strong>11:00 — 19:00</strong>  неділя
+                <br>
+                <br>
+                Вихідні понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+
+              <p class="text-block__paragraph">
+                Контакти:
+                <br>
+                <br>
+                вул. М. Грушевського, 6; Київ, 01001
+                <br>
+                тел. +38 (044) 278-13-57
+                <br>
+                факс +38 (044) 278-74-54
+                <br>
+                e-mail: info@namu.kiev.ua
+              </p>
+
+              <a href="#" class="text-block__button">&#x2191</a>
+
+            </div>
+
+          </div>
+
+          <div class="
+            grid__item
+            grid__item--2-4
+            grid__item-onDesktop--8-10"
+          >
+
+            <div class="footer__nav nav-footer">
+
+              <ul class="menu__list nav-footer__list">
+
+                <li class="menu__item">
+                  <a class="menu__link nav-footer__link" href="#gallery">Галерея</a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link nav-footer__link" href="#subscribe">Про Нас</a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link nav-footer__link" href="#events">Виставки та події</a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link nav-footer__link" href="#contacts">Контакти</a>
+                </li>
+
+              </ul>
+
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="footer__copyrights copyrights">
+
+          <p class="copyrights__text">
+            Designed by Zhyriada Marina
+          </p>
+          <br>
+          <p class="copyrights__text">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+
+        </div>
+
+      </div>
+
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
